...
  },
  "help": {
    "about_irma": "About Yivi",
    "ask": "Ask a question",
    "contact": "support@yivi.app",
    "device": "Mobile",
    "email": "Send an e-mail",
    "faq": "Frequently asked questions",
    "login": "Login",
    "mail_error": "Sorry, we can't open your e-mail app",
    "mail_error_button": "OK",
    "mail_error_title": "Sorry",
    "mail_subject": "Assistance with the Yivi app",
    "question_1": "What can I do with Yivi?",
...
  },
  "home": {
    "nav_bar": {
      "data": "Data",
      "activity": "Activity",
      "notifications": "Notifications",
      "more": "More",
      "scan_qr": "Scan QR"
    },
    "nav_bar_hints": {
      "data": "tab 1 out of 4",
      "activity": "tab 2 out of 4",
      "notifications": "tab 3 out of 4",
...
    "need_help": "Need help?",
    "know_more": "More information",
    "stay_informed": "Stay informed and join the conversation",
    "slogan": "Everyone deserves privacy",
    "version": "Version {version}",
    "developer_mode_enabled": "Developer mode enabled",
    "developer_mode_already_enabled": "Developer mode already enabled",
    "irma_website": "Yivi website",
    "irma_website_link": "https://www.yivi.app/en",
    "privacy_policy": "Yivi's privacy policy",
    "privacy_policy_link": "https://www.yivi.app/en/privacy",
    "app_id": "App ID {id}",
    "log_out": "Log out"
  },
  "pin": {
    "subtitle": "Enter your PIN",
    "button_forgot": "I forgot my PIN",
    "button_block": "Block Yivi"
  },
  "pin_accessibility": {
    "show_pin": "Show PIN",
    "hide_pin": "Hide PIN",
...
