...
              sortKey: const OrdinalSortKey(0),
              child: buildHeaderText('more_tab.app_management'),
            ),
            TilesCard(
              children: [
                InternalLinkTile(
                  key: Key('open_settings_screen_button'),
                  labelTranslationKey: 'more_tab.settings',
                  iconData: Icons.settings_outlined,
                  onTap: context.goSettingsScreen,
                ),
                InternalLinkTile(
                  labelTranslationKey: 'more_tab.faq',
...
