...
              if (showDeveloperModeToggle)
                Padding(
                  padding: EdgeInsets.symmetric(vertical: theme.defaultSpacing),
                  child: TilesCard(
                    children: [
                      ToggleTile(
                        key: const Key('dev_mode_toggle'),
                        labelTranslationKey: 'settings.developer_mode',
                        onChanged: repo.setDeveloperMode,
                        stream: repo.getDeveloperMode(),
                      ),
                    ],
                  ),
...
